--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,7 @@
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1615404881292/work
-aiohttp @ file:///Users/runner/miniforge3/conda-bld/aiohttp_1614280921556/work
-astor @ file:///home/conda/feedstock_root/build_artifacts/astor_1593610464257/work
-astunparse @ file:///home/conda/feedstock_root/build_artifacts/astunparse_1610696312422/work
-async-timeout==3.0.1
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1605083924122/work
-blinker==1.4
-brotlipy==0.7.0
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1619593780156/work
-certifi==2020.12.5
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1613413897768/work
-chardet @ file:///Users/runner/miniforge3/conda-bld/chardet_1610093485994/work
-click==7.1.2
-cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1616851693031/work
-Cython==0.29.23
-flatbuffers @ file:///home/conda/feedstock_root/build_artifacts/python-flatbuffers_1617723079010/work
-gast==0.3.3
-google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1619638455278/work
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio @ file:///Users/runner/miniforge3/conda-bld/grpcio_1619796054462/work
-h5py @ file:///Users/runner/miniforge3/conda-bld/h5py_1617739475122/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
-imbalanced-learn==0.8.0
-imblearn==0.0
-importlib-metadata @ file:///Users/runner/miniforge3/conda-bld/importlib-metadata_1619012232934/work
-ITMO-FS==0.3.3
-joblib==1.0.1
-Keras-Preprocessing @ file:///home/conda/feedstock_root/build_artifacts/keras-preprocessing_1610713559828/work
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1614595805172/work
-multidict @ file:///Users/runner/miniforge3/conda-bld/multidict_1610319029348/work
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1616933195747/work
-oauthlib==3.0.1
-opt-einsum @ file:///home/conda/feedstock_root/build_artifacts/opt_einsum_1617859230218/work
-protobuf==3.15.8
-pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1619620644068/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
-PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1610291468418/work
-qpsolvers==1.6.1
-quadprog==0.1.8
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1608156231189/work
-requests-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/requests-oauthlib_1595492159598/work
-rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1614171254180/work
-scikit-learn==0.24.2
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy_1619562045896/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
-tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1610699261066/work/tensorboard-2.4.1-py3-none-any.whl
-tensorboard-plugin-wit @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-plugin-wit_1611075653546/work/tensorboard_plugin_wit-1.8.0-py3-none-any.whl
-tensorflow @ file:///Users/uwe/miniconda3/conda-bld/tensorflow-split_1619642254977/work/tensorflow_pkg/tensorflow-2.4.1-cp37-cp37m-macosx_10_9_x86_64.whl
-tensorflow-estimator @ file:///home/conda/feedstock_root/build_artifacts/tensorflow-estimator_1610655765755/work/tensorflow_estimator-2.4.0-py2.py3-none-any.whl
-termcolor==1.1.0
-threadpoolctl==2.1.0
-typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1602702424206/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1615828766818/work
-Werkzeug==1.0.1
-wrapt @ file:///Users/runner/miniforge3/conda-bld/wrapt_1610094931751/work
-yarl @ file:///Users/runner/miniforge3/conda-bld/yarl_1610354318691/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1614945704755/work
+pandas
+numpy
+matplotlib
+seaborn
+imblearn
+sklearn
+hyperopt
